# quiz_snippets_0

./: CMakeLists.txt  README.md
snippets/easy/: question_3.cpp
snippets/hard/: question_1.cpp  question_2.cpp  question_3.cpp
snippets/medium/: question_2.cpp  question_3.cpp
snippets/qualification/: question_1.cpp  question_2.cpp
