cmake_minimum_required(VERSION 3.22)
project(quiz_snippets_0)

add_executable(easy_question_1 snippets/easy/question_1.cpp)
add_executable(easy_question_2 snippets/easy/question_2.cpp)
add_executable(easy_question_3 snippets/easy/question_3.cpp)

add_executable(medium_question_1 snippets/medium/question_1.cpp)
add_executable(medium_question_2 snippets/medium/question_2.cpp)
add_executable(medium_question_3 snippets/medium/question_3.cpp)

# add_executable(hard_question_1 snippets/hard/question_1.cpp)
add_executable(hard_question_2 snippets/hard/question_2.cpp)
add_executable(hard_question_3 snippets/hard/question_3.cpp)

add_executable(qualification_question_1 snippets/qualification/question_1.cpp)
# add_executable(qualification_question_2 snippets/qualification/question_2.cpp)
